    + [NT] Added new "--packages-from-file" option.  Lintian will
      read packages from the file (one package per line) and process
      these.  Unlike "--packages-file" it allows its argument to be
      "-" for stdin and the format is simpler.
    + [NT] Deprecated "--packages-file" in favour of the new
      "--packages-from-file" option.

  * lib/Lab.pm:
    + [NT] Removed $dist argument to lab creation, since we rely on
      LINTIAN_DIST being exported anyway.
    + [NT] Allow temporary labs to contain the same package twice if
      the version or/and architecture differs.  (Closes: #632115)
  * lib/Lab/Package.pm:
    + [NT] Symlink in all components of the source package when
      creating the source entry in the lab.  Also removed legacy
      code for using the old unpack scripts.
  * lib/Lintian/Collect/{Binary,Source}.pm:
    + [NT] Refactored code from these files into the module
      Lintian::Collect::Package.
  * lib/Lintian/Collect/Package.pm:
    + [NT] New file.  This serves as a base for Lintian::Collect
      modules that can be unpacked.
  * lib/Lintian/Command.pm:
    + [NT] Added support for appending output to files without
      truncating them first via the new out_append and
      err_append options.
  * lib/Lintian/Data.pm:
    + [NT] Let new take an optional fourth argument, a code sub,
      that can be used to pre-process the value.
  * lib/Lintian/{Internal/FrontendUtil,Profile}.pm:
    + [NT] New files.
  * lib/Lintian/ProcessablePool.pm:
    + [NT] Made the pool consider two packages with the same name
      as duplicates even if their version or architecture differs,
      when the underlying Lab does not support this run.  This
      causes lintian to drop one of the packages rather than ending
      up with an internal error.
  * lib/Lintian/{Tag/Info,Tags}.pm:
    + [NT] Updated for profile support.
  * lib/Read_pkglists.pm:
    + [NT] Merged the binary and udeb format since they were